# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: build.yaml
gendiff/: __init__.py  cli.py  diff_maker.py  gendiff.py  make_diff.py  parse.py  parse_file.py  parser.py
gendiff/formatters/: __init__.py  format.py  formatter.py  json.py  plain.py  stylish.py
gendiff/formatters/utils/: make_json_diff.py
gendiff/scripts/: gendiff.py
gendiff/utils/: cli.py  format_diff.py  formatters.py  gendiff.py  make_diff.py  parse_file.py  stringify.py  stylish.py
tests/: test_format_diff.py  test_gendiff.py  test_make_diff.py  test_make_json_diff.py  test_parse_file.py  test_plain.py  test_stringify.py  test_stylish.py
tests/fixtures/: file1_2_json.txt  file1_2_nested_diff.json  file1_2_nested_result.json  file1_2_plain.txt  file1_2_stylish.txt  file1_nested.json  file1_nested.yaml  file2_nested.yaml  json_difference_for_test_data.txt  make_diff_result.json  make_format_diff_result.json  nested_data_expected_dict.json  test_sort_diff_data.json  test_sort_diff_data_sorted.json
